work on generalizing addressing code.

--- a/index.html
+++ b/index.html
@@ -27,45 +27,15 @@
                 this.code = "nop";
                 this.row = 0;
                 this.col = 0;
-                this.getRelative = function(s) {
+                this.getRelative = function (s) {
                     /* The input is either one of the 4 pneumonics for directions, or a 'direction string' */
-                    if (s.slice(0, 2) == 'r"')
-                    {
+                    if (s.slice(0, 2) == 'r"') {
                         console.log("Received directional string")
                         //TODO parse directional string
                     } else {
-                        delta = [0, 0]
-                        switch (s) {
-                            case "LEFT":
-                                delta[1] = -1
-                                break;
-                            case "RIGHT":
-                                delta[1] = 1
-                                break;
-                            case "UP":
-                                delta[0] = -1
-                                break;
-                            case "DOWN":
-                                delta[0] = 1
-                                break;
-                        }
-                        delta[0] += this.row
-                        delta[1] += this.col
-
-                        //adjust for negatives..
-                        while (delta[0] < 0) {
-                            delta[0] += rowCount;
-                        }
-
-                        while (delta[1] < 0) {
-                            delta[1] += colCount;
-                        }
-
-                        // Take the modulus
-                        delta[0] = delta[0] % rowCount
-                        delta[1] = delta[1] % colCount
-
-                        return leds[(delta[0] * colCount) + delta[1]]
+                        let delta = parseDirection(s);
+                        let nextCoords = addDelta([this.row, this.col], delta);
+                        return leds[(nextCoords[0] * colCount) + nextCoords[1]]
                     }
                 }
             }
@@ -141,21 +111,6 @@
             switch (code[0]) {
                 case "COPY":
                     {
-                        delta = [0, 0]
-                        switch (code[1]) {
-                            case "LEFT":
-                                delta[1] = -1
-                                break;
-                            case "RIGHT":
-                                delta[1] = 1
-                                break;
-                            case "UP":
-                                delta[0] = -1
-                                break;
-                            case "DOWN":
-                                delta[0] = 1
-                                break;
-                        }
                         next = led.getRelative(code[1])
                         newLeds[i].color = leds[(colCount * next.row) + next.col].color
                     }
@@ -164,6 +119,46 @@
                     console.log("Unsupported Operation")
                     break;
             }
+        }
+
+        function parseDirection(s) {
+            let delta = [0, 0]
+            switch (s) {
+                case "LEFT":
+                    delta[1] = -1
+                    break;
+                case "RIGHT":
+                    delta[1] = 1
+                    break;
+                case "UP":
+                    delta[0] = -1
+                    break;
+                case "DOWN":
+                    delta[0] = 1
+                    break;
+            }
+            return delta
+        }
+
+        function addDelta(coords, delta) {
+            let nextCoords = [0,0]
+            nextCoords[0] = coords[0] + delta[0]
+            nextCoords[1] = coords[1] + delta[1]
+
+            //adjust for negatives..
+            while (nextCoords[0] < 0) {
+                nextCoords[0] += rowCount;
+            }
+
+            while (nextCoords[1] < 0) {
+                nextCoords[1] += colCount;
+            }
+
+            // Take the modulus
+            nextCoords[0] = nextCoords[0] % rowCount
+            nextCoords[1] = nextCoords[1] % colCount
+
+            return nextCoords;
         }
 
         function getCursorPosition(canvas, event) {
